Issue #4552 - File permissions dialog broken in ambiance theme - fixed checkbox visibility.

--- a/core/src/main/web/app/styles/theme/ambiance.scss
+++ b/core/src/main/web/app/styles/theme/ambiance.scss
@@ -86,4 +86,10 @@ $ui-icons: url('../images/ambiance/ui-icons_ambiance_256x240.png');
 
 @import "base-theme";
 
-.beaker-theme-ambiance { @extend .base-theme; }
+.beaker-theme-ambiance {
+  @extend .base-theme;
+
+  input[type="checkbox"], input[type="radio"] {
+    visibility: visible;
+  }
+}
